--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-soft-ui-dashboard",
+  "name": "vue-project",
   "version": "3.0.0",
   "private": true,
   "author": "Creative Tim",
@@ -24,10 +24,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "2.10.2",
+    "axios": "^1.3.4",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "jkanban": "^1.3.1",
+    "path": "^0.12.7",
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "^4.0.0-0",
